--- a/content/posts/2021-12.md
+++ b/content/posts/2021-12.md
@@ -1,16 +1,13 @@
 ---
 author: "Zoran"
 title: "缺乏管理经验的反思"
-date: "2021-12-31"
+date: "2021-12-30"
 description: "管理沟通能力 "滑铁卢" 与深度反思"
 tags:
-  - Life
-ShowToc: true
-TocOpen: true
+  - Thinking
 ShowWordCount: true
 ShowReadingTime: true
 ShowBreadCrumbs: true
-ShowShareButtons: true
 ---
 
 # 采购清单引发的职场顿悟
