--- a/content/posts/2021-12.md
+++ b/content/posts/2021-12.md
@@ -2,7 +2,7 @@
 author: "Zoran"
 title: "缺乏管理经验的反思"
 date: "2022-01-01"
-description: "管理沟通能力 "滑铁卢" 与深度反思"
+description: "沟通管理能力的缺失与反思"
 tags:
   - Thinking
 ShowWordCount: true
