update end of year

--- a/content/posts/2025-12-31.md
+++ b/content/posts/2025-12-31.md
@@ -1,12 +1,10 @@
 ---
 author: "Zoran"
-title: "2025 年末回顾 - Keep falling, keep hitting, but always get up see what's next!"
+title: "2025 年末回顾 - Get up see what's next!"
 date: "2025-12-31"
 description: "总是跌倒，总是碰壁，但总会重新站起，看看前方还有什么！"
 tags:
   - Life
-ShowWordCount: true
-ShowReadingTime: true
 ShowBreadCrumbs: true
 ShowShareButtons: true
 ---
