update end of year

--- a/content/posts/2025-12-31.md
+++ b/content/posts/2025-12-31.md
@@ -1,11 +1,47 @@
 ---
 author: "Zoran"
-title: "2025 年末回顾 - Get up see what's next!"
+title: "2025 年末回顾 - I always get up see what's next."
 date: "2025-12-31"
-description: "总是跌倒，总是碰壁，但总会重新站起，看看前方还有什么！"
+description: "总是跌倒，总是碰壁，但总会重新站起，看看前方还有什么。"
 tags:
   - Life
 ShowBreadCrumbs: true
 ShowShareButtons: true
 ---
+
+## 前言
+
+今天是2025年的最后一天，追忆和反思这一整年的成长与变化。
+
+曾以为成长到某个阶段，生活会逐渐趋于平稳，我一边期待着这份安稳，一边又隐隐心中多以一份压力和忐忑。可每年年末回望过去经历的一年，发现生活并不会按照预期出牌，这一年的经历，都是上一年的自己未曾设想的模样。放弃了 2024 年留学的计划，只因自己草率做的未来规划；重拾网络技术，参加了二场 CCIE 的考试，一场考试就价值 1600 美刀； 2025 年 8 月踏入飞往海外游学，经历文化碰撞，在碰壁和撮合中坚定了自己想要的生活和努力方向。
+
+有急于求成的碰壁，有半途而废的遗憾，也有咬牙坚持后的回甘。就像《疯狂动物城》主题曲《Try Everything》里传递的信念，那句藏在成长里的心声：I always get up see what's next.（我总会重新站起来，看看接下来会发生什么。）
+
+>I won't give up, no, I won't give in
+>
+>Til I reach the end, and then I'll start again
+>
+>No, I won't leave, I wanna try everything
+
+
+
+## 关于 2025
+
+2025 年是 GAP 的一年，我尝过落叶漂泊般的无助与迷茫。未来的不确定性，我最终放弃了 2024 年网络安全专业的留学项目。迷茫中，我选择间歇性工作和考证的方式过渡，想通过学习与短暂的工作中结识更多人，通过不同的视角去寻找生活的突破口。
+
+年初，GAP 年的开端。原本以为，可以让自己短暂喘息。长期维持 part-time 状态，实则需要莫大的勇气。过年探亲访友时，面对工作稳定的亲友们的打探，即便知晓他们出于关心，那些带着“异样”的目光，仍让我倍感压力。在国内并不流行 GAP 的大环境下，这种压力更成了挥之不去的困扰。身边朋友也常感叹，近年工作充满不确定性，失去的不少，得到的却寥寥，却又无力从根本上改变现状。
+
+年初的目标清晰又热烈，还把跑步纳入了每日计划。那时总觉得，只有马不停蹄地向前冲，才不算辜负时光。
+
+![3f0b29a28fed631fda113b8113f4dcb4](https://e5d9f02.webp.fi/3f0b29a28fed631fda113b8113f4dcb4.jpg)
+
+可生活的变数从不缺席。年中开始，繁杂的工作任务、突如其来的琐事接连打乱节奏，跑步计划也一直在半马145前后徘徊，后续的进步收效远不及从前。看着手机里许久未更新的运动记录，心里满是自责，总觉得 “一旦中断，之前的努力就全白费了”。
+
+碎片时间里，我读了几本书：《边城》《围城》《小王子》，还有心理学相关的《津巴多普通心理学》《社会心理学》，想从书中去寻找解决自己困扰的办法。同时，我选择重拾网络技术的学习，并定下目标——在年中前拿下思科CCIE认证。
+
+
+
+## CCIE 考证之路
+
+
 
