update end of year

--- a/content/posts/2025-12-31.md
+++ b/content/posts/2025-12-31.md
@@ -37,11 +37,25 @@ ShowShareButtons: true
 
 可生活的变数从不缺席。年中开始，繁杂的工作任务、突如其来的琐事接连打乱节奏，跑步计划也一直在半马145前后徘徊，后续的进步收效远不及从前。看着手机里许久未更新的运动记录，心里满是自责，总觉得 “一旦中断，之前的努力就全白费了”。
 
-碎片时间里，我读了几本书：《边城》《围城》《小王子》，还有心理学相关的《津巴多普通心理学》《社会心理学》，想从书中去寻找解决自己困扰的办法。同时，我选择重拾网络技术的学习，并定下目标——在年中前拿下思科CCIE认证。
+碎片时间里，我读了几本书：《边城》《围城》《小王子》，还有心理学相关的《津巴多普通心理学》《社会心理学》，想从书中去寻找解决自己困扰的办法。同时，我选择重拾网络技术的学习，并定下目标——在年中前拿下思科 CCIE 认证。
 
 
 
 ## CCIE 考证之路
 
+2025 年 3 月至 6 月，迎来最大的滑铁卢。
 
+![image-20260101002020593](https://e5d9f02.webp.fi/image-20260101002020593.png)
+
+CCIE 考试考试失利的阵痛一直持续到通过之后也没有完全消散。那段时间一直在怀疑自己是否做了正确的决定，考证费 1600 美元算是一笔价格不菲的价格。网络上也充斥着证书已经没有价值的言论，证书什么都改变不了。但我最终我选择坚持自我，为 6 月的二战再次冲刺一次，但好在 ENTJ 的我永不言败，结果是好的，最终完成了预期目标。
+
+![d63c3f07baefea8dc50fac9494e1f70d](https://e5d9f02.webp.fi/d63c3f07baefea8dc50fac9494e1f70d.jpg)
+
+
+
+## 转折
+
+8 月底结束项目，着手参与菲律宾的游学计划—— 
+
+[菲律宾游学]: https://zoranzhou.com/posts/philippines-record/	"转变的开端"
 
