--- a/content/posts/2025-12-31.md
+++ b/content/posts/2025-12-31.md
@@ -53,9 +53,7 @@ CCIE 考试考试失利的阵痛一直持续到通过之后也没有完全消散
 
 
 
-## 转折
+## 改变
 
-8 月底结束项目，着手参与菲律宾的游学计划—— 
-
-[菲律宾游学]: https://zoranzhou.com/posts/philippines-record/	"转变的开端"
+8 月底结束项目，着手参与菲律宾的游学计划—— https://zoranzhou.com/posts/philippines-record/
 
