update end of year

--- a/content/posts/2025-12-31.md
+++ b/content/posts/2025-12-31.md
@@ -55,5 +55,16 @@ CCIE 考试考试失利的阵痛一直持续到通过之后也没有完全消散
 
 ## 改变
 
-8 月底结束项目，着手参与菲律宾的游学计划—— https://zoranzhou.com/posts/philippines-record/
+8 月底结束项目，着手参与菲律宾的游学计划——「[🇵🇭菲律宾 Philinter 三个月游学体验](https://zoranzhou.com/posts/philippines-record/)」
 
+回望 2025 这一年，从 GAP 初期的迷茫漂泊，到CCIE考证的跌宕起伏，再到菲律宾游学的全新开启，每一步都走得不算轻松，却实打实藏着成长。那些曾经的自我怀疑、外界压力，还有失利后的阵痛，最终都在“不放弃”的坚持里，变成了照亮前路的光。我渐渐明白，生活本就没有预设的剧本，生活需要在不断试错、不断前行中，最终才能确定自己前行的目标。
+
+2025的关键词是“重启”与“坚定”，而即将到来的2026，我想带着这份在不确定性中站稳脚跟的勇气，继续带着“always get up see what's next”的信念，去探索更多可能。不必纠结于过往的遗憾，也无需焦虑于未来的未知，只要一步一个脚印地往前走，每一次跌倒后的站起，都是向更好的自己靠近。
+
+
+
+## 新年祝福
+
+希望家人、朋友都能健康平安，还在学业的子弟能够学业有成；希望自己依旧能够不忘初心，能够对生活保持积极乐观的心态，继续坚持下去吧！
+
+> 明年有明年的雪，明年的雾色，明年的永无休止的阳光，还有明年数不尽的生机。希望自己幸福，希望苦恼和难过都消失。希望愿望成真，希望悟得光明！
