update end of year

--- a/content/posts/2025-12-31.md
+++ b/content/posts/2025-12-31.md
@@ -37,7 +37,7 @@ ShowShareButtons: true
 
 可生活的变数从不缺席。年中开始，繁杂的工作任务、突如其来的琐事接连打乱节奏，跑步计划也一直在半马145前后徘徊，后续的进步收效远不及从前。看着手机里许久未更新的运动记录，心里满是自责，总觉得 “一旦中断，之前的努力就全白费了”。
 
-碎片时间里，我读了几本书：《边城》《围城》《小王子》，还有心理学相关的《津巴多普通心理学》《社会心理学》，想从书中去寻找解决自己困扰的办法。同时，我选择重拾网络技术的学习，并定下目标——在年中前拿下思科 CCIE 认证。
+碎片时间里，我读《边城》《围城》《小王子》这类经典，也尝试去读《津巴多普通心理学》《社会心理学》这类心理学书籍。当时的我深陷浮躁与迷茫，总盼着能从书本里找到破解，让自己能沉下心来前行。可读完后才发现，那些困扰依旧盘踞心头，并未得到真正消解。也是在这样的状态下，我决定重拾网络技术学习——至少能在专注的实操与钻研中找到一点确定感，并定下了年中前拿下思科 CCIE 认证的目标。
 
 
 
